Changes for Padre-Plugin-Moose

0.04  TBA
	- Added namespace::clean as a dependency (AZAWAWI)
	- Fixed a role code generation bug (AZAWAWI)
	- Added Program Inspector (AZAWAWI)

0.03  2012.2.21
	- Fixed dialog not properly closing on non-win32 platforms (BOWTIE, AZAWAWI) 
	- Refactor variable names (AZAWAWI)
	- Sample code is now correct (AZAWAWI)
	- q{Moose} is now q{Moose...} :) (BOWTIE, AZAWAWI) 

0.02  2012.2.20
	The following feature list is here: (AZAWAWI)
		- Added Moose website/manual/cookbook hyperlinks
		- Added "Add class/role/attribute/subtype" tabs
		- Added code generation readonly preview editor
		- Added comments/main code generation checkboxes
		- Added insert code

0.01  2012.2.15
	- Initial release to CPAN (AZAWAWI)