@@ -4,6 +4,7 @@ Changes for Padre-Plugin-Moose
 	- Added namespace::clean as a dependency (AZAWAWI)
 	- Fixed a role code generation bug (AZAWAWI)
 	- Added Program Inspector (AZAWAWI)
+	- Added Program Outline (AZAWAWI)
 
 0.03  2012.2.21
 	- Fixed dialog not properly closing on non-win32 platforms (BOWTIE, AZAWAWI) 
